add MigrationDatabase Method to Program.cs and ContextSeeder alos add Index partial views

--- a/PersonalWebsite_v2/Views/Home/Index.cshtml
+++ b/PersonalWebsite_v2/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<partial name="_IndexHead.cshtml" />
+<partial name="_IndexAbout.cshtml" />
+<partial name="_IndexFact.cshtml" />
+<partial name="_IndexSkills.cshtml" />
+<partial name="_IndexContact.cshtml" />
+<partial name="_IndexFooter.cshtml" />
