--- a/PersonalWebsite_v2/Views/_ViewImports.cshtml
+++ b/PersonalWebsite_v2/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PersonalWebsite_v2
 @using PersonalWebsite_v2.Models
+@using PersonalWebsite_v2.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
